directives for dashboard

--- a/app/views/dashboard.jade
+++ b/app/views/dashboard.jade
@@ -1,286 +1,10 @@
 section#dashboard
-  .page-header
-    h2 Dashboard
-    br
-
+  .page-header: h2 Dashboard
+  br
+  smart-alarming
+  snapshots
   .row-fluid
-    .sa.widget.span12(ng-show='config.profile.smartAlarm')
-      .head
-        h4 SlimAlarmeren
-        .pull-right
-          small(ng-show='app.guard.currentState')
-            i.icon-fire
-            | Status
-          span.label(ng-show='app.guard.currentState=="available" || app.guard.currentState=="Beschikbaar"',
-          style='background-color: #6cad6c;') BESCHIKBAAR
-          span.label(ng-show='app.guard.currentState=="noplanning" || app.guard.currentState=="Mogelijk inzetbaar"',
-          style='background-color: #a0a0a0;') GEEN PLANNING
-          span.label(ng-show='app.guard.currentState=="unavailable" || app.guard.currentState=="Niet Beschikbaar"',
-          style='background-color: #d34545;') NIET BESCHIKBAAR
-          span.label.label-inverse(style='margin-left: 5px;') {{app.guard.role.toUpperCase()}}
-          .btn-group(style='margin: -10px 0 0 8px;')
-            button.btn.btn-mini.dropdown-toggle(data-toggle='dropdown')
-              | Nieuwe beschikbaarheid
-              span.caret
-            ul.dropdown-menu.pull-right.fast-availability(style='font-size: 10px;')
-              li
-                a(ng-click='setPrefixedAvailability(true, 1)')
-                  .square.available
-                  | Beschikbaar (1 uur)
-              li
-                a(ng-click='setPrefixedAvailability(true, 6)')
-                  .square.available
-                  | Beschikbaar (6 uur)
-              li
-                a(ng-click='setPrefixedAvailability(true, 24)')
-                  .square.available
-                  | Beschikbaar (24 uur)
-              li.divider
-              li
-                a(ng-click='setPrefixedAvailability(false, 1)')
-                  .square.unavailable
-                  | Niet beschikbaar (1 uur)
-              li
-                a(ng-click='setPrefixedAvailability(false, 6)')
-                  .square.unavailable
-                  | Niet beschikbaar (6 uur)
-              li
-                a(ng-click='setPrefixedAvailability(false, 24)')
-                  .square.unavailable
-                  | Niet beschikbaar (24 uur)
-      hr
-      p(ng-show='loading.smartAlarm') Indeling SlimAlarmeren lijst laden...
-
-      ul.sa-setup(ng-hide='loading.smartAlarm')
-        li.sa-truck
-          .sa-member(ng-repeat='trucker in saMembers.truck | orderBy:"rank"')
-            span.sa-member-icon(class='{{(trucker.class) && trucker.class}}')
-              strong {{trucker.icon}}
-            .sa-member-card
-              h5
-                a(href='#/profile/{{trucker.uuid}}#profile', ng-show='trucker.uuid')
-                  | {{trucker.name}}
-                span(ng-hide='trucker.uuid') {{trucker.name}}
-              hr
-              span {{trucker.role}}
-        li.sa-reserves(ng-show='toggleReserves')
-          .sa-member(ng-repeat='reserve in saMembers.reserves.available')
-            span.sa-member-icon.sa-icon-reserve-available
-              strong B{{$index+1}}
-            .sa-member-card
-              h5
-                a(href='#/profile/{{reserve.id}}#profile') {{reserve.name}}
-              hr
-              span Beschikbaar
-          .sa-member(ng-repeat='reserve in saMembers.reserves.unavailable')
-            span.sa-member-icon.sa-icon-reserve-unavailable
-              strong N{{$index+1}}
-            .sa-member-card
-              h5
-                a(href='#/profile/{{reserve.id}}#profile') {{reserve.name}}
-              hr
-              span Niet beschikbaar
-        li.sa-reserves(ng-show='toggleReserves')
-          .sa-member(ng-repeat='reserve in saMembers.reserves.noplanning')
-            span.sa-member-icon.sa-icon-reserve-noplanning
-              strong {{$index+1}}
-            .sa-member-card
-              h5
-                a(href='#/profile/{{reserve.id}}#profile') {{reserve.name}}
-              hr
-              span Mogelijk inzetbaar
-      p(ng-hide='loading.smartAlarm', style='margin-top: 10px;')
-        small.pull-left
-          span.text-warning {{ui.planboard.lastSyncTime}}
-          span.muted {{saSynced | nicelyDate}}
-      button.btn.btn-mini.pull-right(ng-click='toggleReserves=!toggleReserves', ng-hide='loading.smartAlarm')
-        span(ng-hide='toggleReserves') Toon reserves
-        span(ng-show='toggleReserves') Verberg reserves
-
-  .row-fluid
-    #availabilities.sa.widget.span12
-      .head
-        h4
-          | Overzicht beschikbaarheid{{current.group | groupIdToName:true | toTitleCase}}
-          span(ng-show='(current.division != "all")') ({{current.division | divisionIdToName}})
-        .pull-right(ng-hide='loadingAvailability')
-          select(ng-model='current.group',
-          ng-options='group.uuid as group.name for group in groups',
-          ng-selected='current.group',
-          ng-change='getGroupAvailability()',
-          style='width: 160px;')
-          select(ng-model='current.division',
-          ng-options='division.id as division.label for division in divisions',
-          ng-selected='current.division',
-          ng-change='getDivisionAvailability()',
-          ng-show='divisions.length > 0 && current.group != "all"',
-          style="margin-left: 15px; width:160px")
-      div(ng-show='loadingAvailability')
-        hr
-        p Overzicht beschikbaarheid aan het laden...
-
-      section(ng-hide='loadingAvailability')
-        div(ng-show='ng-show', availability.members.available.length='availability.members.available.length')
-          | 0"
-          hr
-          ul.sa-setup
-            li.sa-truck
-              .sa-member(ng-repeat='member in availability.members.available')
-                span.sa-member-icon(class='{{member.style}}')
-                  strong {{member.label}}{{$index+1}}
-                .sa-member-card
-                  h5
-                    a(href='#/profile/{{member.id}}#profile')
-                      | {{member.name | toTitleCase}}
-                  hr
-                  span {{states[member.state].label}}
-                  br
-                  small
-                    strong {{member.end | calculateDeltaTime}}
-        div(ng-show='availability.members.unavailable.length > 0')
-          hr
-          ul.sa-setup
-            li.sa-truck
-              .sa-member(ng-repeat='member in availability.members.unavailable',
-              ng-show='(member.state != "no-state")')
-                span.sa-member-icon.sa-icon-reserve-unavailable
-                  strong {{member.label}}{{$index+1}}
-                .sa-member-card
-                  h5
-                    a(href='#/profile/{{member.id}}#profile') {{member.name | toTitleCase}}
-                  hr
-                  span {{states[member.state].label}}
-                  br
-                  small
-                    strong {{member.end | calculateDeltaTime}}
-        div(ng-show='availability.members.possible.length > 0')
-          hr
-          ul.sa-setup
-            li.sa-truck
-              .sa-member(ng-repeat='member in availability.members.possible')
-                span.sa-member-icon.sa-icon-reserve-noplanning
-                  strong {{member.label}}{{$index+1}}
-                .sa-member-card
-                  h5
-                    a(href='#/profile/{{member.id}}#profile') {{member.name | toTitleCase}}
-                  hr
-                  span {{states[member.state].label}}
-      p
-        hr
-        small.pull-left(style='margin-top: -10px;', ng-hide='loadingAvailability')
-          span.text-warning {{ui.planboard.lastSyncTime}}
-          span.muted {{availability.synced | nicelyDate}}
-
-  .row-fluid
-
-    .widget(class="{{(!browser.mobile) && 'span9' || 'span12'}}")
-      .head
-        h4 {{ui.dashboard.overview}}
-        button#dashboardPopoverBtn.btn.btn-small(bs-popover__='"views/dashboard-pies.html"',
-        data-placement='{{(browser.mobile) && "left" || "bottom"}}',
-        data-title='Overzicht instellingen',
-        ng-click='fixPopoverPos()')
-          i.icon-cog
-      hr
-      p(ng-hide='loading.pies || !checkAnyPies()',
-      ng-show='checkAnyPies()') Er zijn geen groepen geselecteerd.
-      p(ng-show='loadingPies') {{ui.dashboard.groupOverviews}}
-      ul#pies(ng-hide='loadingPies || checkAnyPies()')
-        li(ng-repeat='pie in pies')
-          header
-            h4
-              | {{pie.name}}
-              span(ng-show='(pie.division != "both")')  ({{ pie.division | translateDivision }})
-          .blocks
-            .span4
-              .block
-                .icon
-                  .scoreboard(class='{{pie.state.cls}}')
-                    span.state {{pie.state.diff + pie.state.wish}}
-                    span.seperator /
-                    span.wish {{pie.state.wish}}
-                .body
-                  h3 {{ui.dashboard.currentState}}
-                  hr
-                  h5 {{pie.state.start}}
-                  small.muted van
-                  br
-                  h5 {{pie.state.end}}
-                  small.muted tot
-            .span4
-              .block
-                .icon
-                  .pie(id='weeklyPieCurrent-{{pie.id}}-{{pie.division}}')
-                .body
-                  h3 {{ui.dashboard.thisWeek}}
-                  hr
-                  small.muted {{pie.weeks.current.start.date}} / {{pie.weeks.current.end.date}}
-                  br
-                  h5 {{pie.weeks.current.ratios.more}}%
-                  small.muted {{ui.dashboard.statMore}}
-                  | ,
-                  h5 {{pie.weeks.current.ratios.even}}%
-                  small.muted {{ui.dashboard.statEven}}
-                  | ,
-                  h5 {{pie.weeks.current.ratios.less}}%
-                  small.muted {{ui.dashboard.statLess}}
-            .span4
-              .block
-                .icon
-                  .pie(id='weeklyPieNext-{{pie.id}}-{{pie.division}}')
-                .body
-                  h3 {{ui.dashboard.nextWeek}}
-                  hr
-                  small.muted {{pie.weeks.next.start.date}} / {{pie.weeks.next.end.date}}
-                  br
-                  h5 {{pie.weeks.next.ratios.more}}%
-                  small.muted {{ui.dashboard.statMore}}
-                  | ,
-                  h5 {{pie.weeks.next.ratios.even}}%
-                  small.muted {{ui.dashboard.statEven}}
-                  | ,
-                  h5 {{pie.weeks.next.ratios.less}}%
-                  small.muted {{ui.dashboard.statLess}}
-      hr.lastline(ng-hide='loadingPies || checkAnyPies()')
-      p(ng-hide='loadingPies || checkAnyPies()')
-        small.pull-right
-          span.text-warning {{ui.dashboard.periods}}:
-          span.muted
-            | {{periods.start}}
-            | |
-            | {{periods.end}}
-
-    .widget(ng-show='config.profile.p2000.status', class="{{(!browser.mobile) && 'span3' || 'span12'}}")
-      .head
-        h4 {{ui.dashboard.announcements}}
-      hr
-      p(ng-show='loading.alerts') {{ui.dashboard.loadingP2000}}
-      ul#announcements(ng-hide='loading.alerts')
-        li(ng-show='ng-show', alarms.list.length='alarms.list.length')
-        li(ng-repeat='alarm in alarms.list')
-          table
-            tr
-              td.first
-                span.prio.label.label-important(ng-show='alarm.prio["1"]') PRIO 1
-                span.prio.label.label-warning(ng-show='alarm.prio["2"]') PRIO 2
-                span.prio.label.label-info(ng-show='alarm.prio["3"]') PRIO 3
-                span.prio.label.label-inverse(ng-show='alarm.prio.test') PROEFALARM
-              td.last
-                span.label.label-natural(style='margin-bottom: 7px;') {{alarm.day}} {{alarm.time}}
-                br
-                | {{alarm.body}}
-            tr
-              td(colspan='2')
-                small
-                  i.icon-bullhorn(style='margin-top: -2px; color: #a0a0a0 !important;')
-                  i {{alarm.msgCode}}
-      hr.lastline(ng-hide='loading.alerts')
-      p(ng-hide='loading.alerts')
-        small.pull-left
-          span.text-warning {{ui.planboard.lastSyncTime}}
-          span.muted {{synced.alarms | nicelyDate}}
-        br
-        small.pull-left
-          span.text-warning Capcode(s):
-          span.muted {{capcodes}}
-          span.muted(ng-hide='capcodes') {{config.profile.p2000.codes}}
+    article(class="{{(!browser.mobile) && 'span9' || 'span12'}}")
+      summaries
+    article(class="{{(!browser.mobile) && 'span3' || 'span12'}}", ng-show='config.profile.p2000.status')
+      alarms
