--- a/app/views/dashboard/summaries.jade
+++ b/app/views/dashboard/summaries.jade
@@ -1,7 +1,7 @@
 div.widget
   div.head
     h4 {{ui.dashboard.overview}}
-    button#dashboardPopoverBtn.btn.btn-small(bs-popover__='"views/dashboard-pies.html"',
+    button#dashboardPopoverBtn.btn.btn-small(bs-popover_='"views/dashboard/summary-manager.html"',
     data-placement='{{(browser.mobile) && "left" || "bottom"}}',
     data-title='Overzicht instellingen',
     ng-click='fixPopoverPos()')
