fix: change default location to alle locations

--- a/war/js/views/login.html
+++ b/war/js/views/login.html
@@ -22,7 +22,7 @@
 
       <select ng-model="location"
               ng-options="location for location in locations">
-        <option value="">-- default locatie --</option>
+        <option value="">-- Alle locaties --</option>
       </select>
 
       <button class="btn btn-success dropdown-toggle"
