--- a/app/index.jade
+++ b/app/index.jade
@@ -34,7 +34,7 @@ block navbar
                 span.badge.badge-success(ng-show="(app.unreadMessages > 0)")
                   | {{app.unreadMessages}}
             li(data-match-route='/groups',
-            ng-hide='app.resources.role > 1')
+            ng-hide='StandBy.resources.role > 1')
               a(href='#groups') {{ui.groups.groups}}
           ul.nav.pull-right(ng-hide='browser.mobile')
             li
@@ -49,8 +49,8 @@ block navbar
               a.dropdown-toggle(href='',
               data-toggle='dropdown')
                 i.icon-user.icon-white
-                | {{app.resources.name}}
-                span(ng-show='app.resources.role == 0') [SU]
+                | {{StandBy.resources.name}}
+                span(ng-show='StandBy.resources.role == 0') [SU]
                 b.caret
               ul.dropdown-menu
                 li
