--- a/app/views/faq.jade
+++ b/app/views/faq.jade
@@ -66,7 +66,7 @@
         br
         br
         br
-        section(ng-show='app.resources.role == 1')
+        section(ng-show='StandBy.resources.role == 1')
           .tab-header
             h3.pull-left Voor planners
           hr
