--- a/app/views/profile.jade
+++ b/app/views/profile.jade
@@ -11,7 +11,7 @@ section#profile
             span.entypo &#128100;
             | {{ui.profile.profile}}
         li(class="{{(views.edit==true) && 'active'}}",
-        ng-hide='(data.resources.role == 0 && app.resources.role != 0) || (app.resources.role > 1 && data.resources.uuid != app.resources.uuid)')
+        ng-hide='(data.resources.role == 0 && StandBy.resources.role != 0) || (StandBy.resources.role > 1 && data.resources.uuid != StandBy.resources.uuid)')
           a(href='{{data.resources.uuid}}#editTab',
           data-toggle='tab',
           ng-click='fixTabHeight("editTab"); setViewTo("edit")')
@@ -24,7 +24,7 @@ section#profile
             span.entypo &#128274;
             | {{ui.profile.password}}
         li(class="{{(views.timeline==true) && 'active'}}",
-        ng-hide='(data.resources.role == 0 && app.resources.role != 0) || (app.resources.role > 1 && data.resources.uuid != app.resources.uuid)')
+        ng-hide='(data.resources.role == 0 && StandBy.resources.role != 0) || (StandBy.resources.role > 1 && data.resources.uuid != StandBy.resources.uuid)')
           a(href='{{data.resources.uuid}}#userTimelineTab',
           data-toggle='tab',
           ng-click='fixTabHeight("userTimelineTab"); setViewTo("timeline"); redraw()',
@@ -33,7 +33,8 @@ section#profile
             | {{ui.profile.timeline}}
 
       .tab-content
-        #profileTab.tab-pane(class="{{(views.profile==true) && 'active'}}")
+        // profile
+        div#profileTab.tab-pane(class="{{(views.profile==true) && 'active'}}")
           div(style='overflow: hidden; height: 35px;')
             h3.pull-left(style='margin-top: 0;') {{ui.profile.profileView}}
           hr
@@ -44,9 +45,9 @@ section#profile
             dd(ng-show='groups.length > 0')
               ol
                 li(ng-repeat='group in groups')
-                  span(ng-hide='app.resources.role > 1')
+                  span(ng-hide='StandBy.resources.role > 1')
                     a(href='#/groups?uuid={{group.uuid}}#view') {{group.name}}
-                  span(ng-show='app.resources.role > 1')
+                  span(ng-show='StandBy.resources.role > 1')
                     | {{group.name}}
             dt {{ui.profile.role}}
             dd {{data.resources.role|translateRole}}
@@ -70,30 +71,31 @@ section#profile
             dd {{(data.resources.PostZip == '') && '-' || data.resources.PostZip}}
             dt {{ui.profile.city}}
             dd {{(data.resources.PostCity == '') && '-' || data.resources.PostCity}}
-            section(ng-hide='data.resources.role == 0 || app.resources.role > 1')
+            section(ng-hide='data.resources.role == 0 || StandBy.resources.role > 1')
               hr
               dt {{ui.profile.username}}
               dd {{data.resources.uuid}}
               dt(ng-show='data.resources.pincode') {{ui.profile.pincode}}
               dd(ng-show='data.resources.pincode') {{data.resources.pincode}}
 
-        #editTab.tab-pane(class="{{(views.edit==true) && 'active'}}")
+        // edit
+        div#editTab.tab-pane(class="{{(views.edit==true) && 'active'}}")
           div(style='overflow: hidden; height: 35px;')
             h3.pull-left(style='margin-top: 0;') {{ui.profile.editProfile}}
-            div(ng-hide='app.resources.uuid == profilemeta.uuid')
+            div(ng-hide='StandBy.resources.uuid == profilemeta.uuid')
               button.btn.btn-danger.pull-right(ng-click='showDeleteUserModal()',
               role='button',
               data-toggle='modal',
-              ng-hide='app.resources.role > 1')
+              ng-hide='StandBy.resources.role > 1')
                 | {{ui.profile.remove.title}}
           hr
 
           form.form-vertical(name='profileForm')
-            .control-group(ng-hide='app.resources.role > 1 || profileRole == 0')
+            .control-group(ng-hide='StandBy.resources.role > 1 || profileRole == 0')
               label.control-label {{ui.profile.role}}
               .controls
                 select(ng-model='profileRole', ng-options='id as label for (id, label) in roles')
-            .control-group(ng-hide='app.resources.role > 1')
+            .control-group(ng-hide='StandBy.resources.role > 1')
               | 1"
               label.control-label Groups
               .controls
@@ -202,7 +204,7 @@ section#profile
                 p.text-success(ng-show='profilePhoneNumberParsed[3].result')
                   small
                     i {{profilePhoneNumberParsed[3].message}}
-            .control-group(ng-show='app.resources.role == 0')
+            .control-group(ng-show='StandBy.resources.role == 0')
               label.control-label {{ui.profile.pagerId}}
               .controls
                 input.span5(type='text',
@@ -234,7 +236,7 @@ section#profile
                 ng-model='profilemeta.uuid',
                 value='{{data.resources.uuid}}',
                 disabled='disabled')
-            .control-group(ng-hide='app.resources.role > 1 || views.user')
+            .control-group(ng-hide='StandBy.resources.role > 1 || views.user')
               label.control-label {{ui.profile.password}}
               .controls
                 input.span3(type='text',
@@ -260,7 +262,8 @@ section#profile
               button.btn.btn-success(type='submit',
               ng-click='save(profilemeta)') {{ui.profile.saveProfile}}
 
-        #passwordTab.tab-pane(ng-show='views.user',
+        // password
+        div#passwordTab.tab-pane(ng-show='views.user',
         class="{{(views.password==true) && 'active'}}")
           div(style='overflow: hidden; height: 35px;')
             h3.pull-left(style='margin-top: 0;') {{ui.profile.passChange}}
@@ -285,7 +288,8 @@ section#profile
               button.btn.btn-success(type='submit',
               ng-click='change(passwords)') {{ui.profile.changePass}}
 
-        #userTimelineTab.tab-pane(ng-hide='views.user',
+        // user timeline
+        div#userTimelineTab.tab-pane(ng-hide='views.user',
         ng-controller='timeline',
         class="{{(views.timeline==true) && 'active'}}")
           div(style='overflow: hidden; height: 35px;')
