global config values

--- a/app/views/dashboard.jade
+++ b/app/views/dashboard.jade
@@ -6,5 +6,5 @@ section#dashboard
   .row-fluid
     article(class="{{(!browser.mobile) && 'span9' || 'span12'}}")
       summaries
-    article(class="{{(!browser.mobile) && 'span3' || 'span12'}}", ng-show='config.profile.p2000.status')
+    article(class="{{(!browser.mobile) && 'span3' || 'span12'}}", ng-show='StandBy.config.profile.p2000.status')
       alarms
