--- a/app/views/dashboard/alarms.jade
+++ b/app/views/dashboard/alarms.jade
@@ -31,4 +31,4 @@ div.widget
     small.pull-left
       span.text-warning Capcode(s):
       span.muted {{capcodes}}
-      span.muted(ng-hide='capcodes') {{config.profile.p2000.codes}}
+      span.muted(ng-hide='capcodes') {{StandBy.config.profile.p2000.codes}}
