--- a/app/views/dashboard/smart-alarming.jade
+++ b/app/views/dashboard/smart-alarming.jade
@@ -1,5 +1,5 @@
 .row-fluid
-  .sa.widget.span12(ng-show='config.profile.smartAlarm')
+  .sa.widget.span12(ng-show='StandBy.config.profile.smartAlarm')
     .head
       h4 SlimAlarmeren
 
