--- a/app/views/login/change-password.jade
+++ b/app/views/login/change-password.jade
@@ -1,7 +1,7 @@
 #changePass.boxed(ng-show='views.changePass')
   form(ng-submit='changePass()')
-    img(ng-src='{{config.profile.logos.login}}',
-    alt='{{config.profile.title}}')
+    img(ng-src='{{StandBy.config.profile.logos.login}}',
+    alt='{{StandBy.config.profile.title}}')
     h4.form-signin-heading {{changepass.uuid}}
     .alert(class="{{alert.changePass.type}}",
     ng-show='alert.changePass.display')
