--- a/app/views/login/forgot-password.jade
+++ b/app/views/login/forgot-password.jade
@@ -1,7 +1,7 @@
 #forgot.boxed(ng-show='views.forgot')
   form(ng-submit='forgot()')
-    img(ng-src='{{config.profile.logos.login}}',
-    alt='{{config.profile.title}}')
+    img(ng-src='{{StandBy.config.profile.logos.login}}',
+    alt='{{StandBy.config.profile.title}}')
     h4.form-signin-heading
       | {{ui.login.forgetPassword}}
     .alert(class="{{alert.forget.type}}",
