--- a/app/views/login/preloaded.jade
+++ b/app/views/login/preloaded.jade
@@ -1,6 +1,6 @@
 #preloader
-  img(ng-src='{{config.profile.logos.login}}',
-  alt='{{config.profile.title}}')
+  img(ng-src='{{StandBy.config.profile.logos.login}}',
+  alt='{{StandBy.config.profile.title}}')
   h4 {{ui.login.setting_up_app}}
   .progress.progress-striped.active.span3: .bar
   span.muted
