--- a/app/index.jade
+++ b/app/index.jade
@@ -66,7 +66,7 @@ block navbar
                   a(href='#logout')
                     i.icon-off
                     | {{ui.login.logout}}
-            li#fullscreener(ng-show='config.fullscreen && browser.webkit')
+            li#fullscreener(ng-show='StandBy.config.fullscreen && browser.webkit')
               a(ng-click='fullScreen()')
                 i.icon-fullscreen.icon-white
           ul.nav.pull-right(ng-show='browser.mobile',
@@ -127,7 +127,7 @@ block footer
       #copyrights
         #download-footer
           ul
-            li(ng-show='config.profile.mobileApp.status')
+            li(ng-show='StandBy.config.profile.mobileApp.status')
               .btn-group.dropup
                 button.btn.btn-success.dropdown-toggle(data-toggle='dropdown')
                   | Download mobiele app
