--- a/app/views/login.jade
+++ b/app/views/login.jade
@@ -6,5 +6,5 @@
   forgot-password
   change-password
   download-mobile-app(ng-hide='browser.mobile && browser.screen.width < 768')
-  img(src='images/standby_logo_small.png', alt='StandBy Logo', ng-hide='config.profile.own')
-  span.version: a(href='version.html', target='_blank') StandBy v{{config.version}}
+  img(src='images/standby_logo_small.png', alt='StandBy Logo', ng-hide='StandBy.config.profile.own')
+  span.version: a(href='version.html', target='_blank') StandBy v{{StandBy.config.version}}
