fix: a planner can edit the pagerid

--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -365,7 +365,7 @@
             </div>
 
             <div class="control-group"
-                 ng-show="app.resources.role == 0">
+                 ng-show="app.resources.role <= 1">
               <label class="control-label">{{ui.profile.pagerId}}</label>
               <div class="controls">
                 <input  type="text"
