--- a/war/css/responsive.css
+++ b/war/css/responsive.css
@@ -1084,7 +1084,7 @@
   }
 
   .nav-collapse .nav .nav-header {
-    color: #777777;
+    color: #777;
     text-shadow: none;
   }
 
@@ -1092,7 +1092,7 @@
   .nav-collapse .dropdown-menu a {
     padding: 9px 15px;
     font-weight: bold;
-    color: #777777;
+    color: #777;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
@@ -1117,7 +1117,7 @@
 
   .navbar-inverse .nav-collapse .nav > li > a,
   .navbar-inverse .nav-collapse .dropdown-menu a {
-    color: white;
+    color: #fff;
   }
 
   .navbar-inverse .nav-collapse .nav > li > a:hover,
